--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0"
+    },
+    "autoload": {
+        "files": [
+            "app/Helpers/DefaultUsers.php",
+            "app/Helpers/DefaultVideos.php"
+        ]
     }
+
 }
