--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "watch": "vite"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
@@ -14,13 +15,16 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
-        "vite": "^5.0"
+        "vite": "^6.3.5"
     },
     "autoload": {
         "files": [
             "app/Helpers/DefaultUsers.php",
             "app/Helpers/DefaultVideos.php"
         ]
+    },
+    "dependencies": {
+        "laravel-echo": "^2.1.4",
+        "pusher-js": "^8.4.0"
     }
-
 }
